# langchain-mini

./: .gitignore  README.md  main.py  pyproject.toml
langchain-practice/: .env.template  02-optional-langsmith-tracing-exercise.ipynb  02-phase2-graph-flow-exercise.ipynb  0610_final_exercise.ipynb  medical_diagnosis_rag.py
langchain-practice/ipynb-ref/: 01-contract-analyzer-exercise.ipynb  01-fact-checker-exercise.ipynb  01-first-chain-exercise.ipynb  01-phase1-single-agent-exercise.ipynb  03-phase3-multi-agent-exercise.ipynb  04-phase4-hitl-streaming-exercise.ipynb
