[project]
name = "langchain-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "faiss-cpu>=1.14.3",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-text-splitters>=1.1.2",
    "langchain-upstage>=0.7.7",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
